<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">꾸꾸방송합성</string>
    <string name="app_version">v1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="take_photo">사진찍기\n\n\n</string>
    <string name="load_photo">가져오기\n\n\n</string>
    <string name="save_photo">저장하기\n\n\n</string>
    <string name="about">About\n\n\n</string>
    <string name="share">공유하기\n\n\n</string>
	<string name="about_content"></string>
	<string name="rotate_photo_90">사진 시계 방향 회전</string>
	<string name="rotate_photo_270">사진 반시계 방향 회전</string>
	<string name="newsdesk">NewsDesk</string>
    <string name="banner_ad_unit_id">ca-app-pub-5411061752769220/1181099483</string>
</resources>